--- a/client/myitems.html
+++ b/client/myitems.html
@@ -101,7 +101,12 @@
           return;
         }
 
+        
         items.forEach(item => {
+          if (!item || !item.price || !item.name || !item.description) {
+    console.warn("Incomplete item data:", item);
+    return;
+  }
           const div = document.createElement('div');
           div.className = 'item-box';
           div.innerHTML = `
