--- a/client/register.html
+++ b/client/register.html
@@ -93,9 +93,13 @@
         <input type="text" name="username" placeholder="Username" required>
       </div>
 
-      <div class="form-group">
-        <input type="password" name="password" placeholder="Password" required>
-      </div>
+      <div class="form-group" style="position: relative;">
+  <input type="password" id="password" name="password" placeholder="Password" required>
+  <span id="togglePassword" style="position: absolute; right: 12px; top: 50%; transform: translateY(-50%); cursor: pointer;">
+    👁
+  </span>
+</div>
+
 
       <button type="submit" class="register-button">Register</button>
       <p id="result"></p>
@@ -142,6 +146,16 @@
 }
 
     });
+
+    document.getElementById('togglePassword').addEventListener('click', function () {
+  const passwordInput = document.getElementById('password');
+  const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+  passwordInput.setAttribute('type', type);
+
+  // החלפת סמל 👁 / 🙈
+  this.textContent = type === 'password' ? '👁' : '🙈';
+});
+
   </script>
 </body>
 </html>
