added logo to login and register pages

--- a/client/login.html
+++ b/client/login.html
@@ -88,6 +88,7 @@
 </head>
 <body>
   <div class="login-container">
+    <img src="images/logo.jpg" alt="Logo" class="form-logo">
     <h1>Login</h1>
 
     <form id="loginForm">
