--- a/client/register.html
+++ b/client/register.html
@@ -86,6 +86,7 @@
 </head>
 <body>
   <div class="register-container">
+        <img src="images/logo.jpg" alt="Logo" class="form-logo">
     <h1>Register</h1>
 
     <form id="registerForm">
