--- a/client/store.html
+++ b/client/store.html
@@ -579,6 +579,14 @@
           return;
         }
 
+        if (response.status === 429) {
+          const errorMessage = await response.text();
+          alert(`🚫 ${errorMessage}`);
+          button.innerHTML = originalText;
+          button.disabled = false;
+          return;
+        }
+
         const message = await response.text();
         
         // Success state
